--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,11 @@
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0",
     "react-webcam": "^7.2.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.10",
